k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churn-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: churn-api
  template:
    metadata:
      labels:
        app: churn-api
    spec:

      volumes:
        - name: churn-volume
          persistentVolumeClaim:
            claimName: churn-storage

      containers:
        - name: api
          image: churn-api:v1
          ports:
            - containerPort: 8000

          volumeMounts:
            - name: churn-volume
              mountPath: /app/registry
              subPath: registry

            - name: churn-volume
              mountPath: /app/models
              subPath: models

            - name: churn-volume
              mountPath: /app/logs
              subPath: logs

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30

          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          startupProbe:
            httpGet:
              path: /startup
              port: 8000
            failureThreshold: 30
            periodSeconds: 5
